--- a/Fashion/app.json
+++ b/Fashion/app.json
@@ -1,7 +1,7 @@
 {
   "expo": {
-    "name": "Fashion",
-    "slug": "Fashion",
+    "name": "Jirani",
+    "slug": "Jirani",
     "version": "1.0.0",
     "orientation": "portrait",
     "icon": "./assets/icon.png",
@@ -11,6 +11,14 @@
       "resizeMode": "contain",
       "backgroundColor": "#ffffff"
     },
+    "plugins": [
+      [
+        "expo-image-picker",
+        {
+          "photosPermission": "The app accesses your photos to let you share them with your friends."
+        }
+      ]
+    ],
     "assetBundlePatterns": [
       "**/*"
     ],
@@ -19,12 +27,27 @@
     },
     "android": {
       "adaptiveIcon": {
-        "foregroundImage": "./assets/adaptive-icon.png",
+        "foregroundImage": "./assets/logo.png",
         "backgroundColor": "#ffffff"
-      }
+      },
+      "package": "com.Des_mond.Tom",
+      "permissions": [
+        "android.permission.RECORD_AUDIO"
+      ]
     },
     "web": {
-      "favicon": "./assets/favicon.png"
-    }
+      "favicon": "./assets/favicon.png",
+      "bundler": "metro"
+    },
+    "extra": {
+      "eas": {
+        "projectId": "59a147ab-8d1c-48ed-af8b-64f4b1b57ebe"
+      }
+    },
+    "owner": "des_mond",
+    "runtimeVersion": {
+      "policy": "appVersion"
+    },
+    "updates": {}
   }
 }
