--- a/Fashion/package.json
+++ b/Fashion/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "fashion",
+  "name": "tom",
   "version": "1.0.0",
   "main": "node_modules/expo/AppEntry.js",
   "scripts": {
@@ -9,14 +9,58 @@
     "web": "expo start --web"
   },
   "dependencies": {
-    "@react-navigation/native": "^6.1.16",
-    "expo": "~50.0.13",
-    "expo-status-bar": "~1.11.1",
+    "@expo/config-plugins": "~7.2.2",
+    "@expo/metro-config": "~0.10.0",
+    "@react-native-async-storage/async-storage": "^1.18.2",
+    "@react-native-community/checkbox": "^0.5.17",
+    "@react-native-picker/picker": "2.4.10",
+    "@react-navigation/bottom-tabs": "^6.5.8",
+    "@react-navigation/native": "^6.1.7",
+    "@react-navigation/native-stack": "^6.9.13",
+    "@stripe/stripe-react-native": "0.28.0",
+    "axios": "^1.6.4",
+    "expo-file-system": "~15.4.5",
+    "expo-font": "~11.4.0",
+    "expo-image-picker": "~14.3.2",
+    "expo-module-scripts": "^3.1.0",
+    "expo-modules-autolinking": "~1.5.0",
+    "expo-splash-screen": "~0.20.5",
+    "expo-status-bar": "~1.6.0",
+    "expo-updates": "~0.18.19",
+    "formik": "^2.4.5",
+    "mime": "^4.0.1",
     "react": "18.2.0",
-    "react-native": "0.73.4"
+    "react-dom": "18.2.0",
+    "react-native": "0.72.6",
+    "react-native-dotenv": "^3.4.9",
+    "react-native-gesture-handler": "~2.12.0",
+    "react-native-image-crop-picker": "^0.40.2",
+    "react-native-image-picker": "^7.1.0",
+    "react-native-image-slider-box": "^2.0.7",
+    "react-native-push-notification": "^8.1.1",
+    "react-native-safe-area-context": "4.6.3",
+    "react-native-screens": "~3.22.0",
+    "react-native-snap-carousel": "^4.0.0-beta.6",
+    "react-native-web": "^0.19.10",
+    "react-native-webview": "13.2.2",
+    "sharp-cli": "^4.2.0",
+    "yup": "^1.3.2"
   },
   "devDependencies": {
-    "@babel/core": "^7.20.0"
+    "@babel/core": "^7.23.7",
+    "@expo/webpack-config": "^19.0.0",
+    "babel-loader": "^9.1.3",
+    "babel-plugin-module-resolver": "^5.0.0",
+    "babel-plugin-react-native-web": "^0.19.9",
+    "expo": "^49.0.22",
+    "typescript": "^5.3.3",
+    "url-loader": "^4.1.1",
+    "webpack": "^5.89.0",
+    "webpack-cli": "^5.1.4",
+    "webpack-dev-server": "^4.15.1"
+  },
+  "jest": {
+    "preset": "react-native-web"
   },
   "private": true
 }
