--- a/backend/.env
+++ b/backend/.env
@@ -2,3 +2,7 @@ MONGO_URL=mongodb+srv://desmond:dell2430@tom.u7ovfmj.mongodb.net/TOM
 PORT=3000
 SECRET = dell2430
 JWT_SEC = dell2430
+SERVER_URL=https://localhost:3000/
+BUCKETEER_AWS_ACCESS_KEY_ID = AKIAX7CRDYXPVJ5QHBHP
+BUCKETEER_AWS_SECRET_ACCESS_KEY = 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
+Bucket_Name = bucketeer-897a58fa-5a33-4dbf-aa4a-7ab2e1c7ea29
